--- a/yakisoba.html
+++ b/yakisoba.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simple Yakisoba Recipe</title>
 </head>
 <body>
     <h1>Simple Yakisoba</h1>
-    <img src ="./images/yakisoba.webp" alt="A bowl of simple yakisoba">
+    <img src ="./images/yakisoba.webp" alt="A bowl of simple yakisoba" height="400" width ="450">
     <h3>Description</h3>
     <p>A simple yakisoba recipe suitable for those without much cooking experience. 
         The recipe is suitable for simple modifications to suit your needs and wants, the sauce's 
