--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 
 <body>
     <h1>Simple recipes fit for Odin</h1>
-<a href="./yakisoba.html">Yakisoba</a>
-
+    <ul>
+    <li><a href="./gambas.html"> Gambas</a></li>
+    <li><a href="./napa.html"> Napa </a></li>
+    <li><a href="./yakisoba.html"> Yakisoba </a></li>
+</ul>
 </body>
 </html>
