Added classes to gambas ingredients serving size Added button to return to index

--- a/gambas.html
+++ b/gambas.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gambas al Aljillo Recipe</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Simple Spanish Style Shrimp</h1>
-    <img src ="./images/gambas.jpg" alt="A bowl of gambas, spanish style shrimp" height="400" width="450">
+    <h1 class="the-dish">Simple Spanish Style Shrimp</h1>
+    <img src ="./images/gambas.jpg" alt="A bowl of gambas, spanish style shrimp" height="400" width="auto">
     <h3>Description</h3>
     <p>A simple spanish style shrimp in olive oil brimming with garlic and paprika flavour. 
     </p>
-    
-    <h2>Ingredients for 4 Servings </h2>
+        <div style="display:flex">
+            <h2>Ingredients for serving size</h2><h2 class="serving_size">4</h2> 
+        </div>  
     <ul> 
-        <li>2 kg <strong>Frozen, peeled and deveined large shrimp</strong></li>
-        <li>1 tsp <strong>Hot smoked paprika</strong></li>
-        <li>4 cloves <strong>Garlic</strong></li>
-        <li>1/4 cup <strong>Extra-virgin olive oil</strong></li>
-        <li>2 Tbsp <strong>Sherry or white wine</strong></li>
-        <li>1 Tbsp <strong>Chopped Parsley</strong></li>
-        <li><strong>salt</strong></li>
+        <li><div class="ingredient_serving">2 kg</div> <strong>Frozen, peeled and deveined large shrimp</strong></li>
+        <li><div class="ingredient_serving">1 tsp</div> <strong>Hot smoked paprika</strong></li>
+        <li><div class="ingredient_serving">4 cloves</div> <strong>Garlic</strong></li>
+        <li><div class="ingredient_serving">1/4 cup</div> <strong>Extra-virgin olive oil</strong></li>
+        <li><div class="ingredient_serving">2 Tbsp</div> <strong>Sherry or white wine</strong></li>
+        <li><div class="ingredient_serving">1 Tbsp</div> <strong>Chopped Parsley</strong></li>
+        <li><strong>Salt</strong></li>
     </ul>
 
     <h2>Preparation</h2>
@@ -31,11 +33,12 @@
 
     <h2>Cooking</h2>
     <ol>
-        <li>Heat olive oil on medium heat, add <strong>garlic</strong> and cook for about 2 minutes until golden</li>
-    <li>Pour in <strong>sherry or white wine</strong></li> and stir continuously until sauce is boiling and the shrimp is cooked through and add 1 minute 
+        <li>Heat <strong>olive oil</strong> on medium heat, add <strong>garlic</strong> and cook for about 2 minutes until golden</li>
+    <li>Pour in <strong>sherry or white wine</strong> and stir continuously until sauce is boiling and the shrimp is cooked through and add 1 minute </li>
     <li>Remove from heat, stir in <strong>parsley</strong> and then serve</li>
 </ol>
-
+<br>
+<a class ="button" href="./index.html">Back to Index</a>
     
 
 </body>
