--- a/napa.html
+++ b/napa.html
@@ -6,14 +6,17 @@
     <title>Napa Cabbage Stir Fry</title>
 </head>
 <body>
-    <h1>Simple Japanese Napa Cabbage Stir Fry</h1>
-    <img src ="./images/napa-cabbage.jpeg" alt="A plate of napa cabbage stir fry" height="400" width="450">
+    <h1 class="the-dish">Simple Japanese Napa Cabbage Stir Fry</h1>
+    <img src ="./images/napa-cabbage.jpeg" alt="A plate of napa cabbage stir fry" height="400" width="auto">
 
     <h3>Description</h3>
     <p>A simple Japanese style napa cabbage stir fry suitable for all sorts of customisation
     </p>
 
-    <h2>Ingredients for 1 Serving </h2>
+    <div>
+     <h2>Ingredients for Serving Size</h2><h2 class="serving_size"></h2>
+
+    </div>
     <ul> 
         <li>100g <strong>Napa cabbage</strong></li>
         <li>1 <strong>Shiitake mushroom</strong></li>
@@ -35,8 +38,8 @@
     <ol>
         <li>Heat pan on medium heat, once hot add <strong>bacon</strong> and stir fry</li>
         <li>Once bacon is cooked, add thick pieces of <strong>napa cabbage</strong></li> and sprinkle in half of prepared <strong>salt</strong> 
-        <li>Stir to mix and then cover and cook on medium-low hear for 2 minutes</li>
-        <li>Open lid and stir, add <strong>shiitake</strong> and tender, leafy pieces of naba cabbage. Sprinke in the rest of the salt and stir</li>
+        <li>Stir to mix and then cover and cook on medium-low heat for 2 minutes</li>
+        <li>Open lid and stir, add <strong>shiitake</strong> and tender, leafy pieces of naba cabbage. Sprinkle in the rest of the salt and stir</li>
         <li>Cover and cook for 3-4 minutes, check if tough cabbage pieces are cooked through</li>
         <li>If not stir and then cover for additional 1-2 minutes</li>
         <li>Season with 0.03 tsp <strong>freshly ground black pepper</strong> and 0.5 tsp <strong>soy sauce</strong>. Stir</li>
