Updated all files with classes and buttons

--- a/napa.html
+++ b/napa.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Napa Cabbage Stir Fry</title>
 </head>
 <body>
@@ -14,17 +15,17 @@
     </p>
 
     <div>
-     <h2>Ingredients for Serving Size</h2><h2 class="serving_size"></h2>
+     <h2>Ingredients for Serving Size</h2><h2 class="serving_size">1</h2>
 
     </div>
     <ul> 
-        <li>100g <strong>Napa cabbage</strong></li>
-        <li>1 <strong>Shiitake mushroom</strong></li>
-        <li>1 slice <strong>Smoked bacon</strong></li>
-        <li>0.5 tsp <strong>Extra-virgin olive oil</strong></li>
-        <li>0.06 tsp <strong>Salt</strong></li>
-        <li>0.03 tsp <strong>Ground black pepper</strong></li>
-        <li>1 tsp <strong>Japanese soy sauce</strong></li>
+        <li><div class="ingredient_serving">100g</div> <strong>Napa cabbage</strong></li>
+        <li><div class="ingredient_serving">1</div> <strong>Shiitake mushroom</strong></li>
+        <li><div class="ingredient_serving">1 slice</div> <strong>Smoked bacon</strong></li>
+        <li><div class="ingredient_serving">0.5 tsp</div><strong>Extra-virgin olive oil</strong></li>
+        <li><div class="ingredient_serving">0.06 tsp</div> <strong>Salt</strong></li>
+        <li><div class="ingredient_serving">0.03 tsp</div> <strong>Ground black pepper</strong></li>
+        <li><div class="ingredient_serving">1 tsp</div> <strong>Japanese soy sauce</strong></li>
     </ul>
 
     <h2>Preparation</h2>
@@ -37,7 +38,7 @@
     <h2>Cooking</h2>
     <ol>
         <li>Heat pan on medium heat, once hot add <strong>bacon</strong> and stir fry</li>
-        <li>Once bacon is cooked, add thick pieces of <strong>napa cabbage</strong></li> and sprinkle in half of prepared <strong>salt</strong> 
+        <li>Once bacon is cooked, add thick pieces of <strong>napa cabbage</strong>and sprinkle in half of prepared <strong>salt</strong> </li>
         <li>Stir to mix and then cover and cook on medium-low heat for 2 minutes</li>
         <li>Open lid and stir, add <strong>shiitake</strong> and tender, leafy pieces of naba cabbage. Sprinkle in the rest of the salt and stir</li>
         <li>Cover and cook for 3-4 minutes, check if tough cabbage pieces are cooked through</li>
@@ -46,6 +47,7 @@
         <li>Transfer to a plate and serve</li>
 
 </ol>
-
+<br>
+<a class ="button" href="./index.html">Back to Index</a>
 </body>
 </html>
