--- a/yakisoba.html
+++ b/yakisoba.html
@@ -4,27 +4,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Yakisoba Recipe</title>
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>Simple Yakisoba</h1>
-    <img src ="./images/yakisoba.webp" alt="A bowl of simple yakisoba" height="400" width ="450">
+    <h1 class="the-dish">Simple Yakisoba</h1>
+    <img src ="./images/yakisoba.webp" alt="A bowl of simple yakisoba" height="400" width ="auto">
     <h3>Description</h3>
     <p>A simple yakisoba recipe suitable for those without much cooking experience. 
         The recipe is suitable for simple modifications to suit your needs and wants, the sauce's 
         sour tang goes well with all sorts of ingredients.
     </p>
-    <h2>Ingredients for 1 Serving </h2>
-    <ul> 
-        <li>27 ml <strong>Yakisoba sauce</strong></li>
-        <li>100 g <strong>Sliced pork belly or preferred protein</strong></li>
-        <li>47 g <strong>Onion</strong></li>
-        <li>33 g <strong>Carrot</strong></li>
-        <li>75 g <strong>Green cabbage</strong></li>
-        <li>0.67 <strong>Scallions</strong></li>
-        <li>1 <strong>Shiitake mushrooms</strong></li>
-        <li>0.67 Tbsp <strong>Neutral oil</strong></li>
+    <div style="display:flex">
+        <h2>Ingredients for serving size</h2><h2 class="serving_size">1</h2> 
+    </div>  
+        <ul> 
+        <li><div class="ingredient_serving">27 ml</div> <strong>Yakisoba sauce</strong></li>
+        <li><div class="ingredient_serving">100 g</div> <strong>Sliced pork belly or preferred protein</strong></li>
+        <li><div class="ingredient_serving">47 g</div> <strong>Onion</strong></li>
+        <li><div class="ingredient_serving">33 g</div> <strong>Carrot</strong></li>
+        <li><div class="ingredient_serving">75 g</div> <strong>Green cabbage</strong></li>
+        <li><div class="ingredient_serving">0.67</div> <strong>Scallions</strong></li>
+        <li><div class="ingredient_serving">1</div> <strong>Shiitake mushrooms</strong></li>
+        <li><div class="ingredient_serving">0.67</div> Tbsp <strong>Neutral oil</strong></li>
         <li><strong>black pepper</strong></li>
-        <li>1 serving <strong>Pre-steamed yakisoba noodles</strong></li>
+        <li><div class="ingredient_serving">1 serving</div> <strong>Pre-steamed yakisoba noodles</strong></li>
     </ul>
 
     <h2>Preparation</h2>
@@ -52,7 +56,8 @@
     <li>Put cooked yakisoba noodles on top of the protein and vegetable. Then drizzle 26.67 ml <strong>yakisoba sauce</strong> on the noodles</li>
     <li>Toss the noodles with a pair of tongs to combine the noodles and ingredients. When the sauce is well distributed transfer the finished noodles to a plate and serve</li>
 </ol>
-
+<br>
+<a class ="button" href="./index.html">Back to Index</a>
     
 
 </body>
