Changed gambas pic for consistency with others Changed layout of recipe index Fixed recipe serving size to be in-line

--- a/index.html
+++ b/index.html
@@ -8,11 +8,30 @@
 </head>
 
 <body>
-    <h1>Simple recipes fit for Odin</h1>
-    <ul>
-    <li><a href="./gambas.html"> Gambas</a></li>
-    <li><a href="./napa.html"> Napa </a></li>
-    <li><a href="./yakisoba.html"> Yakisoba </a></li>
+    <h1 class="main_title">Simple Odin Recipes</h1>
+    <ul class="recipe_list">
+    <li><div>
+        <img src ="./images/gambas.jpeg" alt="A bowl of gambas, spanish style shrimp" 
+        height="200px"; 
+        width="200"
+        style="object-fit: cover"
+        />
+    <a href="./gambas.html"> Gambas</a></div></li>
+    <li><div>
+        <img src ="./images/napa-cabbage.jpeg" 
+        height ="200px"
+        width ="200px"
+        style = "object-fit: none"
+        alt="A plate of napa cabbage stir fry"/>
+        <a href="./napa.html"> Napa </a>
+    </div></li>
+    <li><div>
+        <img src ="./images/yakisoba.webp" 
+        height ="200px"
+        width ="200px"
+        style = "object-fit: cover"
+        alt="A bowl of simple yakisoba" />
+        <a href="./yakisoba.html"> Yakisoba </a></div></li>
 </ul>
 </body>
 </html>
