--- a/napa.html
+++ b/napa.html
@@ -7,22 +7,19 @@
     <title>Napa Cabbage Stir Fry</title>
 </head>
 <body>
-    <h1 class="the-dish">Simple Japanese Napa Cabbage Stir Fry</h1>
+    <h1 class="the_dish">Simple Japanese Napa Cabbage Stir Fry</h1>
     <img src ="./images/napa-cabbage.jpeg" alt="A plate of napa cabbage stir fry" height="400" width="auto">
 
     <h3>Description</h3>
     <p>A simple Japanese style napa cabbage stir fry suitable for all sorts of customisation
     </p>
 
-    <div>
-     <h2>Ingredients for Serving Size</h2><h2 class="serving_size">1</h2>
-
-    </div>
+     <h2 class="serving_size">Ingredients for Serving Size of </h2><span class="serving">1</span>
     <ul> 
         <li><div class="ingredient_serving">100g</div> <strong>Napa cabbage</strong></li>
         <li><div class="ingredient_serving">1</div> <strong>Shiitake mushroom</strong></li>
         <li><div class="ingredient_serving">1 slice</div> <strong>Smoked bacon</strong></li>
-        <li><div class="ingredient_serving">0.5 tsp</div><strong>Extra-virgin olive oil</strong></li>
+        <li><div class="ingredient_serving">0.5 tsp</div><strong> Extra-virgin olive oil</strong></li>
         <li><div class="ingredient_serving">0.06 tsp</div> <strong>Salt</strong></li>
         <li><div class="ingredient_serving">0.03 tsp</div> <strong>Ground black pepper</strong></li>
         <li><div class="ingredient_serving">1 tsp</div> <strong>Japanese soy sauce</strong></li>
