--- a/yakisoba.html
+++ b/yakisoba.html
@@ -8,16 +8,14 @@
 
 </head>
 <body>
-    <h1 class="the-dish">Simple Yakisoba</h1>
+    <h1 class="the_dish">Simple Yakisoba</h1>
     <img src ="./images/yakisoba.webp" alt="A bowl of simple yakisoba" height="400" width ="auto">
     <h3>Description</h3>
     <p>A simple yakisoba recipe suitable for those without much cooking experience. 
         The recipe is suitable for simple modifications to suit your needs and wants, the sauce's 
         sour tang goes well with all sorts of ingredients.
     </p>
-    <div style="display:flex">
-        <h2>Ingredients for serving size</h2><h2 class="serving_size">1</h2> 
-    </div>  
+        <h2 class="serving_size">Ingredients for serving size of</h2><span class="serving">1</span> 
         <ul> 
         <li><div class="ingredient_serving">27 ml</div> <strong>Yakisoba sauce</strong></li>
         <li><div class="ingredient_serving">100 g</div> <strong>Sliced pork belly or preferred protein</strong></li>
@@ -38,7 +36,7 @@
         <li>Julienne the <strong>carrot</strong> into 5 cm strips</li>
         <li>Remove the core of the <strong>cabbage</strong> and cut the cabbage wedge into 2.5 cm wide pieces</li>
         <li>Chop <strong>green onions</strong> into 5 cm pieces </li>
-        <li>Remove the <strong>shiitake</strong>stems and cut into 6 mm slices</li>
+        <li>Remove the <strong>shiitake</strong> stems and cut into 6 mm slices</li>
     </ul>
 
     <h2>Cooking</h2>
