--- a/gambas.html
+++ b/gambas.html
@@ -7,19 +7,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="the-dish">Simple Spanish Style Shrimp</h1>
-    <img src ="./images/gambas.jpg" alt="A bowl of gambas, spanish style shrimp" height="400" width="auto">
+    <h1 class="the_dish">Simple Spanish Style Shrimp</h1>
+    <img src ="./images/gambas.jpeg" alt="A bowl of gambas, spanish style shrimp" height="400" width="auto">
     <h3>Description</h3>
     <p>A simple spanish style shrimp in olive oil brimming with garlic and paprika flavour. 
     </p>
-        <div style="display:flex">
-            <h2>Ingredients for serving size</h2><h2 class="serving_size">4</h2> 
-        </div>  
+            <h2 class ="serving_size">Ingredients for serving size of</h2><span class="serving">4</span> 
     <ul> 
         <li><div class="ingredient_serving">2 kg</div> <strong>Frozen, peeled and deveined large shrimp</strong></li>
         <li><div class="ingredient_serving">1 tsp</div> <strong>Hot smoked paprika</strong></li>
         <li><div class="ingredient_serving">4 cloves</div> <strong>Garlic</strong></li>
-        <li><div class="ingredient_serving">1/4 cup</div> <strong>Extra-virgin olive oil</strong></li>
+        <li><div class="ingredient_serving">1/4 cup</div> <strong> Extra-virgin olive oil</strong></li>
         <li><div class="ingredient_serving">2 Tbsp</div> <strong>Sherry or white wine</strong></li>
         <li><div class="ingredient_serving">1 Tbsp</div> <strong>Chopped Parsley</strong></li>
         <li><strong>Salt</strong></li>
