Added margin to content

--- a/gambas.html
+++ b/gambas.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1 class="the_dish">Simple Spanish Style Shrimp</h1>
+
+    <div class="content-space">
     <img src ="./images/gambas.jpeg" alt="A bowl of gambas, spanish style shrimp" height="400" width="auto">
     <h3>Description</h3>
     <p>A simple spanish style shrimp in olive oil brimming with garlic and paprika flavour. 
@@ -37,7 +39,7 @@
 </ol>
 <br>
 <a class ="button" href="./index.html">Back to Index</a>
-    
+</div>
 
 </body>
 </html>
