--- a/napa.html
+++ b/napa.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <h1 class="the_dish">Simple Japanese Napa Cabbage Stir Fry</h1>
-    <img src ="./images/napa-cabbage.jpeg" alt="A plate of napa cabbage stir fry" height="400" width="auto">
+   
 
+    <div class="content-space">
+        <img src ="./images/napa-cabbage.jpeg" alt="A plate of napa cabbage stir fry" 
+        height="400" 
+        width="auto">
     <h3>Description</h3>
     <p>A simple Japanese style napa cabbage stir fry suitable for all sorts of customisation
     </p>
@@ -46,5 +50,6 @@
 </ol>
 <br>
 <a class ="button" href="./index.html">Back to Index</a>
+</div>
 </body>
 </html>
