--- a/yakisoba.html
+++ b/yakisoba.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1 class="the_dish">Simple Yakisoba</h1>
+
+    <div class="content-space">
     <img src ="./images/yakisoba.webp" alt="A bowl of simple yakisoba" height="400" width ="auto">
     <h3>Description</h3>
     <p>A simple yakisoba recipe suitable for those without much cooking experience. 
@@ -56,7 +58,7 @@
 </ol>
 <br>
 <a class ="button" href="./index.html">Back to Index</a>
-    
+</div>
 
 </body>
 </html>
